ワークスペースのディレクトリ構造修正

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ..:/workspaces:cached
+      - ..:/workspaces/sol_coffeesys:cached
     network_mode: service:db # DBと同じネットワークを共有
     # 開発を止めないための設定
     command: sleep infinity
