--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   push:
     branches: [ "main", "feature/**" ]
-    paths: [ "backend/**" ] # backend以下に変更があった時だけ動かす（効率化）
+    paths: [ "backend/**", "frontend/**" ] # backend/frontend 以下に変更があった時だけ動かす（効率化）
   pull_request:
     branches: [ "main" ]
-    paths: [ "backend/**" ]
+    paths: [ "backend/**", "frontend/**" ]
 
 jobs:
   check:
@@ -40,3 +40,31 @@ jobs:
 
       - name: Test
         run: go test -v ./...
+
+  frontend-tests:
+    name: Frontend tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Cache NPM
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/frontend/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install frontend deps
+        working-directory: frontend
+        run: npm ci
+
+      - name: Run frontend tests
+        working-directory: frontend
+        run: npm test -- --ci --reporters=default
