refactor: change reading jwt key to env file #3

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,5 +30,8 @@
   },
   "forwardPorts": [3000, 8080, 5432],
   "remoteUser": "vscode",
-  "postCreateCommand": "sudo chown -R $(whoami):$(whoami) /go"
+  "postCreateCommand": "sudo chown -R $(whoami):$(whoami) /go",
+  "remoteEnv": {
+    "JWT_SECRET": "${containerEnv:JWT_SECRET}"
+  }
 }
