--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     network_mode: service:db # DBと同じネットワークを共有
     # 開発を止めないための設定
     command: sleep infinity
+    env_file:
+      - .env
 
   db:
     image: postgres:17-trixie # 最新のポスグレ
